--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 <h2>Projects</h2>
 <hr />
 <h2>Practice Assignments</h2>
-<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/practice1a/index.html">Practice 1</a>
+<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/practice1a/index.html">Practice 1a</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
+<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/htmlpractice1/index.html">Practice 1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/practice1b/index.html">Practice 1b</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/htmlpractice2/index.html">Practice 2</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr />
 <h2>Book Assignments</h2>
