--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <h2>Projects</h2>
 <hr />
 <h2>Practice Assignments</h2>
-<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/practice1a/index.html">Practice 1a</a>
+<a href="https://github.com/BioCunningRay/INFO2420/tree/d5370916f9bbc748368d8b1d43f6de18786e7256/practice1a">Practice 1a</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/htmlpractice1/index.html">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/practice1b/FAQ.html">Practice 1b</a>
+<a href="https://github.com/BioCunningRay/INFO2420/blob/d5370916f9bbc748368d8b1d43f6de18786e7256/practice1b/FAQ.html">Practice 1b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/htmlpractice2/index.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
