--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h1>Home Page for Jared Farr</h1>
 <hr />
 <h2>Projects</h2>
+<a href="https://github.com/BioCunningRay/INFO2420/blob/f49b29d07c742f9865c3218a8e10e502aef48be8/project1/index.html">Project 1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Practice Assignments</h2>
 <a href="https://github.com/BioCunningRay/INFO2420/tree/d5370916f9bbc748368d8b1d43f6de18786e7256/practice1a">Practice 1a</a>
