--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <h1>Home Page for Jared Farr</h1>
 <hr />
 <h2>Projects</h2>
-<a href="https://github.com/BioCunningRay/INFO2420/blob/f49b29d07c742f9865c3218a8e10e502aef48be8/project1/index.html">Project 1</a>
+<a href="Projects/project1/index.html">Project 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Practice Assignments</h2>
-<a href="https://github.com/BioCunningRay/INFO2420/tree/d5370916f9bbc748368d8b1d43f6de18786e7256/practice1a">Practice 1a</a>
+<a href="Practices/htmlpractice1/index.html">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="https://github.com/BioCunningRay/INFO2420/blob/099a745dbf84b57474150e58ac74103d09dc7dcb/htmlpractice1/index.html">Practice 1</a>
+<a href="Practices/practice1a/index.html">Practice 1a</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="https://github.com/BioCunningRay/INFO2420/blob/d5370916f9bbc748368d8b1d43f6de18786e7256/practice1b/FAQ.html">Practice 1b</a>
+<a href="Practices/practice1b/FAQ.html">Practice 1b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="https://github.com/BioCunningRay/INFO2420/blob/54bb1d910fbe225f150026079662b75bd00fef83/practice2/cactus.html">Practice 2</a>
+<a href="Practices/practice2/cactus.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr />
