--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice2/cactus.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-
+<a href="Practices/practice3/index.html">Practice 3</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice3b/glossary.html">Practice 3b</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice4a/index.html">Practice 4a</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Book Assignments</h2>
 
