--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice4a/index.html">Practice 4a</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice4b/CSS3Fonts.html">Practice 4b</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Book Assignments</h2>
 
