--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <h2>Projects</h2>
 <a href="Projects/project1/index.html">Project 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project2/AboutUs.html">Project 2:About Us</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project2/Tributes.html">Project 2:Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/htmlpractice1/index.html">Practice 1</a>
