--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice4b/CSS3Fonts.html">Practice 4b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice5/index.html">Practice 5</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Book Assignments</h2>
 
