--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice5/index.html">Practice 5</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice5b/bistro.html">Practice 5b</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Book Assignments</h2>
 
