--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice5b/bistro.html">Practice 5b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice6a/practice6a.html">Practice 6a</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Book Assignments</h2>
 
