--- a/index.html
+++ b/index.html
@@ -3,6 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <title>Jared Farr's Home Page</title>
+<style>
+    body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f4f4f9;
+  color: #333;
+  margin: 2em auto;
+  max-width: 960px;
+  padding: 1em;
+  line-height: 1.6;
+}
+
+h1, h2 {
+  color: #2c3e50;
+  margin-bottom: 0.5em;
+}
+
+hr {
+  border: none;
+  border-top: 2px solid #ccc;
+  margin: 1.5em 0;
+}
+
+a {
+  color: #0066cc;
+  text-decoration: none;
+  font-weight: 500;
+  margin: 0 0.5em;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #00509e;
+}
+
+h1 {
+  border-bottom: 4px solid #2c3e50;
+  padding-bottom: 0.2em;
+}
+
+body > h2 {
+  margin-top: 2em;
+}
+
+</style>
 </head>
 
 <body>
@@ -38,6 +82,8 @@
 <a href="Practices/practice5b/bistro.html">Practice 5b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice6a/practice6a.html">Practice 6a</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/practice6b/table.html">Practice 6b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Book Assignments</h2>
