--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@ body > h2 {
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/project2/Tributes.html">Project 2:Tributes</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project3/AboutUs.html">Project 3:About Us</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project3/Tributes.html">Project 3:Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project3/SiteDesign.html">Project 3:Site Design Color Palate</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/htmlpractice1/index.html">Practice 1</a>
