--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body > h2 {
 <a href="Projects/project2/AboutUs.html">Project 2:About Us</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/project2/Tributes.html">Project 2:Tributes</a>
-&nbsp;&nbsp;|&nbsp;&nbsp;
+&nbsp;&nbsp;|&nbsp;&nbsp;<br>
 <a href="Projects/project3/AboutUs.html">Project 3:About Us</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/project3/Tributes.html">Project 3:Tributes</a>
