--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ body > h2 {
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/project3/SiteDesign.html">Project 3:Site Design Color Palate</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project4/AboutUs.html">Project 4:About Us w/ Table</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/htmlpractice1/index.html">Practice 1</a>
