--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ body > h2 {
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/practice6b/table.html">Practice 6b</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/flexbox/sixteen_one/bakery_ch16.html">FlexboxOne</a>
 <hr />
 <h2>Book Assignments</h2>
 
