--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ body > h2 {
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/project4/AboutUs.html">Project 4:About Us w/ Table</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project5/rent_a_pet_graphics.html">Project 5 Graphics</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/project5/index.html">Project 5 index</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/htmlpractice1/index.html">Practice 1</a>
